[package]
name = "async_signal_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
event-listener = "5.3.1"
nix = { version = "0.29.0", features = ["signal"] }
once_cell = "1.19.0"
pin-project = "1.1.5"

[dev-dependencies]
monoio = "0.2.3"
tokio = { version = "1.38.0", features = ["macros"] }
