[package]
name = "signal_future"
version = "0.1.0"
edition = "2021"

[dependencies]
event-listener = "5.3.1"
nix = { version = "0.29.0", features = ["signal"] }
once_cell = "1.19.0"
pin-project = "1.1.5"

[dev-dependencies]
# the sync feature is necessary as in our test, `waker.wake()` will be invoked
# by a thread other than the runtime thread, such a `wake()` will ONLY work if
# the `sync` feature is enabled.
monoio ={ version =  "0.2.3", features = ["sync"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3.30"

[target.'cfg(target_os="linux")'.dev-dependencies]
glommio = "0.9.0"
